--- a/src/main/resources/templates/exam04.html
+++ b/src/main/resources/templates/exam04.html
@@ -9,15 +9,15 @@
 <form action="" th:action="@{/ex04/result}" th:object="${userForm}" method="post">
 <div th:if="${#fields.hasErrors('name')}"
 	 th:errors="*{name}"
-	 style="color:red">エラー！</div>
+	 style="color:red">エラーメッセージ！</div>
 名前:<input type="text" name="name" ><br>
 <div th:if="${#fields.hasErrors('age')}"
 	 th:errors="*{age}"
-	 style="color:red">エラー！</div>
+	 style="color:red">エラーメッセージ！</div>
 年齢:<input type="text" name="age" ><br>
 <div th:if="${#fields.hasErrors('comment')}"
 	 th:errors="*{comment}"
-	 style="color:red">エラー！</div>
+	 style="color:red">エラーメッセージ！</div>
 コメント:<br>
 <textarea name="comment" ></textarea><br>
 <button>登録</button>
